# kbase-service-orcidlink

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Dockerfile-dev-interpreter  Dockerfile.dev  Makefile  ORCIDLink.spec  README.md  RELEASE.md  RELEASE_NOTES.md  SERVICE_DESCRIPTION.toml  TODO.md  Taskfile  compile_report.json  deploy.cfg  docker-compose-dev.yml  docker-compose-prod-like.yml  docker-compose-runner.yml  docker-compose-test.yml  docker-compose-testing.yml  docker-compose.yml  kbase.yml  log_config.yaml  mypy.ini  pyproject.toml  run-kb-sdk.sh  tox.ini
.devcontainer/: Dockerfile  Dockerfile.dev  Dockerfile.devcontainer  devcontainer.json  docker-compose.yml
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: code-checks-and-tests.yml  manual-build.yml  manual.yml  pr_build.yml  pull-request-develop-merged.yml  pull-request-main.yml  release-main.yml  reusable_build-push.yml  reusable_build.yml  reusable_pre-build.yml  reusable_test.yml  test.yml
config/: README.md
data/:  identifiers.json  README.md  citation-type.json  contributor-roles.json  errors.yml  external-id-types.json  extract-values.py  extract-values2.py  identifiers.xml  osti-contributor-types.json  relationship-types.json  work-types.json
dev/work/: README.md
docs/: architecture.md  deployment.md  design.md  dev-mongo.md  development.md  docker.md  errors.md
docs/api/: README.md  gfm.css  index.md  openapi.json
docs/design/: design.md  errors.md  orcid-tokens.md
docs/development/: development.md  fastapi-checklist.md  mongodb.md  read-me-template.md
docs/diagrams/: linking-flow.puml  usage-flow.puml
docs/one-pagers/: configuration.md
docs/operation/: build.md  configuration.md  core-service-requirements.md  database-migration.md  deployment.md  docker.md  environment-variables.md  orcid-api.md  releasing.md  tasks.md
docs/orcid/: api-errors.json  overview.md
docs/quick-starts/: architecture.md  deployment.md
etc/: docker-compose-dev.yml  docker-compose-prod-like.yml  docker-compose-runner.yml  docker-compose-testing.yml
schema/v0.2.1/: linking_sessions.json  links.json
schema/v0.3.0/: description.json  linking_sessions_completed.json  linking_sessions_initial.json  linking_sessions_started.json
schema/v0.4.0/: linking_sessions_completed.json  links.json
scripts/: entrypoint.sh  render-config.sh  run-black.sh  run-mypy.sh  run-server-dev.sh  run-server.sh  run-tests.sh  service-initialization.sh  start-dev-bash.sh  start-dev-server.sh  start-prod-server.sh  start-server-dev.sh  start-server.sh  start_server.sh
scripts/docker-entrypoint-initdb.d/: initialize.js
src/: api_types.py  main.py  model_types.py
src/boot/: service_initialization.py
src/lib/: DynamicServiceClient.py  GenericClient.py  GenericClient2.py  ORCIDClient.py  RESTClient.py  ServiceWizard.py  auth.py  authclient.py  config.py  constants.py  db.py  json_file.py  ostiapi.py  responses.py  route_utils.py  storage_model.py  transform.py  utils.py
src/misc/: check-openapi.py  extract-schema.py  generate-docs.py  generate-openapi.py  git-info.py  service-initialization.py
src/orcidlink/: api_types.py  loggers.py  main.py  model.py  model_types.py  process.py  runtime.py
src/routers/: demos.py  doiorg.py  link.py  linking_sessions.py  orcid.py  works.py
src/test/: test_main.py  test_process.py
templates/: config.json.tmpl  config.tmpl.toml  config.yaml.tmpl
test/data/: git_info1.json  kbase1.yml  link-bar.json  link1.json  link2.json  link3.json  link4.json  link5.json  linking_session_record_complete.json  linking_session_record_completed.json  linking_session_record_initial.json  linking_session_record_started.json  service_description1.toml
tools/: docker-compose-dev.yml  docker-compose-prod-like.yml  docker-compose-runner.yml  docker-compose-testing.yml
tools/runner/: Dockerfile  Taskfile2  docker-compose-tool-runner.yml  docker-compose-tool-testing.yml
tools/scripts/: check-autoflake.sh  run-autoflake.sh  run-black.sh  run-isort.sh  run-mypy.sh  (+2 more)
work/: README.md
(+228 files in other folders)
