[tool.poetry]
name = "orcid-link"
version = "0.3.0"
description = ""
authors = ["Erik Pearson <eapearson@lbl.gov>"]

[tool.poetry.dependencies]
aiohttp = "3.8.5"
python = "3.11.4"
cachetools = "5.3.1"
dicttoxml2 = "2.1.0"
email-validator = "2.0.0"
fastapi = "0.101.0"
httpx = "0.24.1"
jinja2-tools = "1.0.7"
pymongo = "4.4.1"
PyYAML = "6.0.1"
toml = "0.10.2"
uvicorn = "0.23.2"
uvloop = "0.17.0"
xmltodict = "0.13.0"

[tool.poetry.group.dev.dependencies]
autoflake = "2.2.0"
black = "23.7.0"
fastapi = { version = "0.101.0", extras = ["all"] }
mongomock = "4.1.2"
mypy = "1.5.0"
pipdeptree = "2.12.0"
pyfakefs = "5.2.3"
pytest = "7.4.0"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
types-cachetools = "5.3.0.6"
types-python-dateutil = "2.8.19.14"
types-PyYAML = "6.0.12.11"
types-toml = "0.10.8.7"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]

mypy_path = "src"
files = "src/orcidlink/**/*.py"
explicit_package_bases = true
no_namespace_packages = false
disallow_untyped_calls = true
disallow_untyped_defs = true
strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
